@@ -20,6 +20,13 @@
         class="page-count">$page.page_count</span>#end
 </div>
 
+<div class="error">
+  #if(${response.response.error.code})
+    <h1>ERROR ${response.response.error.code}</h1>
+    ${response.response.error.msg}
+  #end
+</div>
+
 <div class="results">
   #if($response.response.get('grouped'))
     #foreach($grouping in $response.response.get('grouped'))
